/* =========================
   ENUMS
   ========================= */
Enum Weekday {
  MON
  TUE
  WED
  THU
  FRI
  SAT
  SUN
}

Enum MedForm {
  TABLET
  CAPSULE
  LIQUID
  INJECTION
  INHALER
  TOPICAL
  DROPS
  OTHER
}

Enum Route {
  ORAL
  SUBLINGUAL
  INHALATION
  TOPICAL
  INJECTION
  OPHTHALMIC
  NASAL
  RECTAL
  OTHER
}

Enum Unit {
  MG
  MCG
  G
  ML
  IU
  DROP
  PUFF
  UNIT
  TAB
  CAPS
}

Enum DoseStatus {
  SCHEDULED
  TAKEN
  SKIPPED
  MISSED
}

Enum Channel {
  PUSH
  EMAIL
  SMS
}

Enum NotifyStatus {
  SENT
  DELIVERED
  FAILED
}

Enum TimeFormat {
  H12
  H24
}

/* =========================
   TABLES
   ========================= */

Table User {
  id            varchar [pk, not null]
  name          varchar
  email         varchar [unique]
  emailVerified datetime
  image         varchar
  passwordHash  varchar
  createdAt     datetime [not null, note: "default now() in Prisma"]
  updatedAt     datetime [not null, note: "@updatedAt in Prisma"]

  Note: 'Root user. Relations: accounts, settings, prescriptions, medications, reminderLogs, careProviders'
}

Table Account {
  id                varchar [pk, not null]
  userId            varchar [not null, ref: > User.id]
  type              varchar [not null]
  provider          varchar [not null]
  providerAccountId varchar [not null]
  refresh_token     varchar
  access_token      varchar
  expires_at        int
  token_type        varchar
  scope             varchar
  id_token          varchar
  session_state     varchar

  Indexes {
    (provider, providerAccountId) [unique]
    (userId)
  }
}

Table VerificationToken {
  identifier varchar [not null]
  token      varchar [not null, unique]
  expires    datetime [not null]

  Indexes {
    (identifier, token) [unique]
  }
}

/* =========================
   USER SETTINGS
   ========================= */

Table UserSettings {
  userId          varchar [pk, not null, ref: > User.id]
  timezone        varchar [not null] // IANA
  timeFormat      TimeFormat [not null, default: 'H24']
  defaultChannels varchar[] [not null, note: "Channel[] in Prisma"]

  Note: 'One-to-one with User'
}

/* =========================
   MEDICATIONS & CARE PROVIDERS
   ========================= */

Table Medication {
  id            varchar [pk, not null]
  userId        varchar [not null, ref: > User.id]
  name          varchar [not null]
  brandName     varchar
  form          MedForm [not null]
  strengthValue decimal
  strengthUnit  Unit
  route         Route
  notes         text

  createdAt datetime [not null, note: "default now()"]
  updatedAt datetime [not null, note: "@updatedAt"]

  Indexes {
    (userId)
  }

  Note: 'User’s private catalog item. One-to-one Inventory; may be used by multiple Prescriptions.'
}

Table CareProvider {
  id     varchar [pk, not null]
  userId varchar [not null, ref: > User.id]
  name   varchar [not null]
  email  varchar
  phone  varchar
  clinic varchar

  Indexes {
    (userId)
  }
}

/* =========================
   PRESCRIPTIONS & SCHEDULES
   ========================= */

Table Prescription {
  id           varchar [pk, not null]
  userId       varchar [not null, ref: > User.id]
  medicationId varchar [not null, ref: > Medication.id]
  providerId   varchar [ref: > CareProvider.id]
  indication   text
  asNeeded     boolean [not null, default: false]
  maxDailyDose decimal
  instructions text
  startDate    datetime [not null]
  endDate      datetime

  createdAt datetime [not null, note: "default now()"]
  updatedAt datetime [not null, note: "@updatedAt"]

  Indexes {
    (userId)
    (medicationId)
    (providerId)
  }
}

Table Schedule {
  id             varchar [pk, not null]
  prescriptionId varchar [not null, ref: > Prescription.id]
  timezone       varchar [not null] // IANA
  daysOfWeek     varchar[] [not null, note: "Weekday[] in Prisma"]
  times          varchar[] [not null, note: "HH:mm strings"]
  doseQuantity   decimal
  doseUnit       Unit
  startDate      datetime
  endDate        datetime

  createdAt datetime [not null, note: "default now()"]
  updatedAt datetime [not null, note: "@updatedAt"]

  Indexes {
    (prescriptionId)
  }
}

/* =========================
   DOSE LOGS & INVENTORY
   ========================= */

Table DoseLog {
  id             varchar [pk, not null]
  prescriptionId varchar [not null, ref: > Prescription.id]
  scheduleId     varchar [ref: > Schedule.id]
  scheduledFor   datetime [not null]
  takenAt        datetime
  status         DoseStatus [not null, default: 'SCHEDULED']
  quantity       decimal
  unit           Unit
  notes          text
  createdAt      datetime [not null, note: "default now()"]

  Indexes {
    (prescriptionId)
    (scheduleId)
    (scheduledFor)
  }
}

Table Inventory {
  id              varchar [pk, not null]
  medicationId    varchar [not null, unique, ref: > Medication.id]
  currentQty      decimal [not null, default: 0]
  unit            Unit [not null]
  lowThreshold    decimal
  lastRestockedAt datetime
}

/* =========================
   NOTIFICATIONS
   ========================= */

Table NotificationLog {
  id        varchar [pk, not null]
  userId    varchar [not null, ref: > User.id]
  doseLogId varchar [ref: > DoseLog.id]
  channel   Channel [not null]
  status    NotifyStatus [not null]
  sentAt    datetime [not null, note: "default now()"]
  meta      json

  Indexes {
    (userId)
    (doseLogId)
  }
}
